2014-10-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* Moved to github