@@ -1,0 +1,11 @@
+*~
+*.log
+INSTALL
+aclocal.m4
+autom4te.cache/
+configure
+config.status
+install-sh
+missing
+Makefile
+Makefile.in
