@@ -1,0 +1,7 @@
+# tuit/Makefil.am
+
+tuitdir = $(datadir)/lua/$(LUA_VERSION)/@LUA_MODPATH@
+
+dist_tuit_DATA = combine.lua array.lua lazy.lua list.lua
+
+# tuit/Makefil.am ends here
