@@ -1,3 +1,5 @@
 2014-10-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
 
+	* tuit/array.lua, tuit/lazy.lua: Changing unfold method
+
 	* Moved to github
